--- a/views/buysell.ejs
+++ b/views/buysell.ejs
@@ -34,8 +34,8 @@
 
       
          <div style="margin-top: 100px">
-            <a class="ui button black inverted" style="color: green" href="/<%=id%>/fertilisers">Buy</a>
-             <a class="ui button black inverted" style="color: green" href="/<%=id%>/machines">Sell</a>
+            <a class="ui button black inverted" style="color: green" href="/<%=id%>/buy">Buy</a>
+             <a class="ui button black inverted" style="color: green" href="/<%=id%>/sell">Sell</a>
             
          </div>
              <% include partials/footer%>
