--- a/views/UserProf.ejs
+++ b/views/UserProf.ejs
@@ -61,8 +61,8 @@ img{
                            <p>Name: <%= item.name %></p>
                            <p  style="font-weight: 2.5em">Expiry Date <%= item.expiryDate %> </p>
               <p style="font-weight: 2.5em">Cost: Rs. <%= item.cost %></p>
-              <a href="#" class="ui button blue inverted">EDIT POST</a>
-              <a href="#" class="ui button red inverted" style="display: inline">DELETE POST</a>
+              <a href="" class="ui button blue inverted">EDIT POST</a>
+              <a href="" class="ui button red inverted" style="display: inline">DELETE POST</a>
                          </div>
                         
                     </div>
