Final changes made

--- a/views/buysell.ejs
+++ b/views/buysell.ejs
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Chat App</title>
+  <title>Raahat</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link rel="stylesheet" type="text/css" href="/css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css" >
@@ -13,7 +13,8 @@
 </head>
 <style type="text/css">
   body{
-    background-image: url("http://prioryfarmnursery.co.uk/wp-content/uploads/2016/02/shutterstock_377699248.jpg");
+    background-image: url("http://jacobswellappeal.org/wp-content/uploads/2014/11/donate-medicines.jpg");
+     background-size:cover;
       }
    
 </style>
@@ -21,7 +22,7 @@
 <body >
    <div class="ui fixed inverted menu">
             <div class="ui container">
-                <div class="header item"><a href="/"><i class="certificate icon"></i>Enquiry</a></div>
+                <div class="header item"><a href="/"><i class="certificate icon"></i>Raahat</a></div>
                 
                 <ul class="nav navbar-nav navbar-right">
                         
@@ -34,8 +35,8 @@
 
       
          <div style="margin-top: 100px">
-            <a class="ui button black inverted" style="color: green" href="/<%=id%>/buy">Buy</a>
-             <a class="ui button black inverted" style="color: green" href="/<%=id%>/sell">Sell</a>
+            <a class="ui button black inverted" style="font-size: 30px;width: 220px; height: 30px; color: green; text-align: center; margin-left: 30%; padding-top: 5px; padding-bottom: 15px;" href="/<%=id%>/buy">Buy</a>
+             <a class="ui button black inverted" style="font-size: 30px;width: 220px; height: 30px; color: green; text-align: center;padding-top: 5px; padding-bottom: 15px;"" href="/<%=id%>/sell">Sell</a>
             
          </div>
              <% include partials/footer%>
