--- a/views/partials2/header.ejs
+++ b/views/partials2/header.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title> BlogsApp is here!!</title>
+    <title>Raahat</title>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.11/semantic.min.css"/>
     <style>
         .container.main{
@@ -19,7 +19,7 @@
 <div class="ui fixed inverted menu">
     <div class="ui container">
         <div class="header item">
-            <i class="dashboard icon"></i>Krishy
+            <i class="dashboard icon"></i>Raahat
         </div>
         
 
