--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>PhotoHolic</title>
+        <title>Raahat</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css" >
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -68,7 +68,7 @@
 
 
             <div class="ui container">
-                <div class="header item"><a href="/"><i class="certificate icon"></i>Expiry</a></div>
+                <div class="header item"><a href="/"><i class="certificate icon"></i>Raahat</a></div>
                 
                  <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
