--- a/views/partials/header1.ejs
+++ b/views/partials/header1.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>App</title>
+        <title>Raahat</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css" >
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -32,11 +32,9 @@ th {
      <div class="ui fixed inverted menu">
 
             <div class="ui container">
-                <div class="header item"><a href="/"><i class="certificate icon"></i>KrishY</a></div>
+                <div class="header item"><a href="/"><i class="certificate icon"></i>Raahat</a></div>
                  <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                        <a href="/login" class="item"  style="float: right">Login</a>
-                        <a href="/register" class="item"  style="float: right">Sign Up</a>
                          <a href="/logout" class="item"  style="float: right">Logout</a>
                 </ul>
             </div>
@@ -46,13 +44,5 @@ th {
 
 
    <div class="container">
-    <% if (error && error.length >0){ %>
-     <div class="alert alert-danger">
-       <%= error %>
-     </div>
-     <% }else if(success && success.length >0) { %>
-     <div class="alert alert-success" role="alert">
-       <%= success %>
-     </div>
-     <% } %>
+   
    </div>
