--- a/views/UserProf.ejs
+++ b/views/UserProf.ejs
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Krishy</title>
+  <title>Raahat</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link rel="stylesheet" type="text/css" href="/css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css" >
@@ -37,7 +37,7 @@ img{
 <body >
    <div class="ui fixed inverted menu">
             <div class="ui container">
-                <div class="header item"><a href="/"><i class="certificate icon"></i>KrishY</a></div>
+                <div class="header item"><a href="/"><i class="certificate icon"></i>Raahat</a></div>
                 <a href="/<%=id%>/items/new" class="item"  style="float: right">Sell</a>
                
                  <div class="collapse navbar-collapse">
