--- a/views/receipt.ejs
+++ b/views/receipt.ejs
@@ -50,6 +50,8 @@ img{
                  <h3 style="margin-top: 60px; text-align: left">Your prescription is valid and has <%=item.name%></h3>
             <h4 style="font-weight: 2.5em">The concerned dealer <%=item.username.username%> has marked the price down to Rs. <%= item.cost %></h4>
             <h4>Please carry this receipt alongwith!</h4>
+            
+<img src= "https://upload.wikimedia.org/wikipedia/commons/7/7f/Lolol.png"/>
               </div>
            
 
